• Renamed mobile.css. • Fixed scrolling on iOS. • Edited main meta tag.

--- a/public/mobile.css
+++ b/public/mobile.css
@@ -58,12 +58,16 @@
 	/*———————————————————————————————————————*/
 	/* SECTION Elements                      */
 	/*———————————————————————————————————————*/
-
 	html, body {
 		background-color: var(--background-color-1);
-		margin: 0;
-		width: 100%;
-		height: 100%;
+		margin:   0;
+		width:    100%;
+		height:   100%;
+		overflow: hidden;
+	}
+
+	body {
+		position: fixed;
 		overflow: hidden;
 	}
 
@@ -142,7 +146,7 @@
 		top: 1.5em;
 		left: 50%;
 		transform: translate(-50%);
-		width: 30.5em;
+		min-width: 30.5em;
 		height: 4em;
 		z-index: 1;
 		animation: 2s top-to-bottom;
@@ -154,16 +158,16 @@
 	/*———————————————————————————————————————*/
 
 	#home-page {
-		top: 4.5em;
+		top: 10em;
 	}
 
 	#home-page-background {
 		position: absolute;
-		left: 50%;
 		top: 4em;
+		left: 50%;
 		transform: translateX(-50%);
-		height: 100em;
-		width: 100em;
+		height: 70em;
+		width: 70em;
 		/*border-top: var(--border-2);*/
 		border-radius: 50%;
 		box-shadow: 0px -15px 25px rgba(255, 255, 255, 0.25);
@@ -173,6 +177,7 @@
 	#home-title {
 		position: absolute;
 		left: 50%;
+		width: 18em;
 		transform: translateX(-50%);
 		top: 5em;
 		animation: 2s fadeIn;
@@ -853,7 +858,7 @@
 
 	.pages {
 		position: absolute;
-		width: 100%;
+		width: 80%;
 		height: 100%;
 		font-family: var(--font-family-1);
 		color: var(--text-color-1);
